--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -471,10 +471,19 @@ padding-left: 2.7rem;
   width: 60%
 }
 .skills__firebase{
-  width: 80%
+  width: 70%
 }
 .skills__python{
   width: 70%
+}
+.skills__java{
+  width: 60%
+}
+.skills__c{
+  width: 80%
+}
+.skills__sql{
+  width: 80%
 }
 
 .skills__ml{
